images folder name in image tag updated

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20px">
     <tr>
-      <td><img src="images/pushpendra.png" alt="Pushpendra's profile photo" width="150px" height="180px"></td>
+      <td><img src="Images/pushpendra.png" alt="Pushpendra's profile photo" width="150px" height="180px"></td>
       <td>
         <h1>Pushpendra Singh Sikarwar</h1>
         <p><em>Project, Sales and System Engineer at <a href="https://www.knorr-bremse.co.in/en/">Knorr-Bremse</a></em></p>
